Do not delete EventTeam models for teams who won awards at an Event if the team did not attend the Event

--- a/templates_jinja2/team_details.html
+++ b/templates_jinja2/team_details.html
@@ -44,7 +44,7 @@
             </li>
             <li>
               <a class="smooth-scroll" href="#media">Photos &amp; Videos</a>
-              <li><a class="smooth-scroll" href="#robot-profile">Robot Profile</a></li>
+              <a class="smooth-scroll" href="#robot-profile">Robot Profile</a>
             </li>
           </ul>
         </div>
