--- a/templates_jinja2/match_partials/match_predictions_table_header.html
+++ b/templates_jinja2/match_partials/match_predictions_table_header.html
@@ -9,7 +9,7 @@
       Pressure / Rotors:<br>Actual<br><em>(Predicted Probability)</em>
     {% elif year == 2018 %}
       AQ / FtB:<br>Actual<br><em>(Predicted Probability)</em>
-    {% elif year == 2020 %}
+    {% elif year in {2020, 2021} %}
       Energized / Operational:<br>Actual<br><em>(Predicted Probability)</em>
     {% endif %}
   </th>
